--- a/index.html
+++ b/index.html
@@ -1,135 +1,107 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Portfolio</title>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Portfolio</title>
+    <!-- logo -->
+    <link rel="icon" href="https://papercallio-production.s3.amazonaws.com/uploads/event/logo/786/frontend.png" />
 
-  <!-- logo -->
-  <link rel="icon" href="https://papercallio-production.s3.amazonaws.com/uploads/event/logo/786/frontend.png" />
+    <!-- stylesheet -->
+    <link rel="stylesheet" href="shared.css" />
+    <link rel="stylesheet" href="style.css" />
 
-  <!-- stylesheet -->
-  <link rel="stylesheet" href="style.css" />
+    <!-- icons -->
+    <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 
-  <!-- google fonts -->
-  <link
-    href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap"
-    rel="stylesheet" />
+    <!-- gsap -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
 
-  <!-- icons -->
-  <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
+    <!-- AnimeJS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 
-  <!-- gsap -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
+    <!-- JQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
+  </head>
 
-  <!-- AnimeJS -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
-
-  <!-- JQuery -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
-</head>
-
-<body
-  style="-moz-user-select: none; -webkit-user-select: none; -ms-user-select:none; user-select:none;-o-user-select:none;"
-  unselectable="on" onselectstart="return false;" onmousedown="return false;" id="body" class="body">
-  <div class="container">
-    <div class="loading-screen"></div>
-    <div class="loader">
-      <div class="ringOne ring">
-        <img src="./img/ring.png" alt="" />
-      </div>
-      <div class="ringTwo ring">
-        <img src="./img/ring.png" alt="" />
-      </div>
-    </div>
-
-    <!-- <div class="contact">GET IN TOUCH</div> -->
-
-    <div class="menu" id="menu">
-      <ion-icon id="options" name="options"></ion-icon>
-    </div>
-
-    <div class="header" id="header">
-      <h1 class="ml7" id="title">
-        <span class="text-wrapper">
-          <span class="letter">Bohdan Asauliuk</span>
-        </span>
-      </h1>
-
-      <p id="tagline" class="p1">
-        Hard Skills: HTML, CSS(Sass), JS.
-        <br />
-        <br />
-        Soft Skills: English.
-      </p>
-
-      <br /><br /><br />
-
-      <p id="tagline" class="p2">You can check out my work down below!</p>
-      <div class="circles">
-        <div class="circle-multiple circle-multiple-1">
-          <div class="circle circle-1"></div>
-          <div class="circle circle-2"></div>
-          <div class="circle circle-3"></div>
-          <a href="about.html" class="btn-link about-me">ABOUT ME</a>
+  <body
+    style="-moz-user-select: none; -webkit-user-select: none; -ms-user-select: none; user-select: none; -o-user-select: none"
+    unselectable="on"
+    onselectstart="return false;"
+    onmousedown="return false;"
+    id="body"
+    class="body"
+  >
+    <div class="container">
+      <div class="loading-screen"></div>
+      <div class="loader">
+        <div class="ringOne ring">
+          <img src="./img/ring.png" alt="" />
         </div>
-        <div class="circle-multiple circle-multiple-2">
-          <div class="circle circle-1"></div>
-          <div class="circle circle-2"></div>
-          <div class="circle circle-3"></div>
-          <a href="portfolio.html" class="btn-link portfolio">PORTFOLIO</a>
+        <div class="ringTwo ring">
+          <img src="./img/ring.png" alt="" />
         </div>
       </div>
-      <div class="media">
-        <ul>
-          <li>
-            <a href="https://github.com/larnex">
-              <ion-icon name="logo-github"></ion-icon>
-            </a>
-          </li>
-          <li>
-            <a href="https://instagram.com/bogdan.asaulyuk">
-              <ion-icon name="logo-instagram"></ion-icon>
-            </a>
-          </li>
-          <li>
-            <a href="https://facebook.com/">
-              <ion-icon name="logo-facebook"></ion-icon>
-            </a>
-          </li>
-        </ul>
+
+      <!-- <div class="contact">GET IN TOUCH</div> -->
+
+      <div class="menu" id="menu">
+        <ion-icon id="options" name="options"></ion-icon>
       </div>
-      <div class="logo">
-        <h1 class="logo-title" id="logo-title">Larnex</h1>
+
+      <div class="header" id="header">
+        <h1 class="ml7" id="title">
+          <span class="text-wrapper">
+            <span class="letter">Bohdan Asauliuk</span>
+          </span>
+        </h1>
+
+        <p id="tagline" class="p1">
+          Hard Skills: HTML, CSS(Sass), JS.
+          <br />
+          <br />
+          Soft Skills: English.
+        </p>
+
+        <br /><br /><br />
+
+        <p id="tagline" class="p2">You can check out my work down below!</p>
+        <div class="circles">
+          <div class="circle-multiple circle-multiple-1">
+            <div class="circle circle-1"></div>
+            <div class="circle circle-2"></div>
+            <div class="circle circle-3"></div>
+            <a href="portfolio.html" class="btn-link about-me">PORTFOLIO</a>
+          </div>
+        </div>
+        <div class="media">
+          <ul>
+            <li>
+              <a href="https://github.com/larnex">
+                <ion-icon name="logo-github"></ion-icon>
+              </a>
+            </li>
+            <li>
+              <a href="https://instagram.com/bogdan.asaulyuk">
+                <ion-icon name="logo-instagram"></ion-icon>
+              </a>
+            </li>
+            <li>
+              <a href="https://facebook.com/">
+                <ion-icon name="logo-facebook"></ion-icon>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="logo">
+          <h1 class="logo-title" id="logo-title">Larnex</h1>
+        </div>
       </div>
     </div>
-  </div>
 
-  <!-- <div class="media">
-            <ul>
-                  <li>
-                        <a href="https://github.com/larnex">
-                              <ion-icon name="logo-github"></ion-icon>
-                        </a>
-                  </li>
-                  <li>
-                        <a href="https://instagram.com/bogdan.asaulyuk">
-                              <ion-icon name="logo-instagram"></ion-icon>
-                        </a>
-                  </li>
-                  <li>
-                        <a href="https://facebook.com/">
-                              <ion-icon name="logo-facebook"></ion-icon>
-                        </a>
-                  </li>
-
-            </ul>
-      </div> -->
-
-  <!-- js -->
-  <script src="script.js"></script>
-</body>
-
+    <!-- js -->
+    <script src="script.js"></script>
+  </body>
 </html>
