--- a/portfolio.html
+++ b/portfolio.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <!-- logo -->
     <link rel="icon" href="https://papercallio-production.s3.amazonaws.com/uploads/event/logo/786/frontend.png" />
 
     <!-- stylesheet -->
+    <link rel="stylesheet" href="shared.css">
     <link rel="stylesheet" href="portfolio.css" />
 
-    <!-- google fonts -->
-    <link
-        href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap"
-        rel="stylesheet" />
 
     <!-- icons -->
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
@@ -28,10 +24,135 @@
     <!-- JQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
     <title>Portfolio</title>
-</head>
+  </head>
 
-<body>
+  <body>
+    <!DOCTYPE html>
+    <html lang="en">
+      <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <link rel="icon" href="https://papercallio-production.s3.amazonaws.com/uploads/event/logo/786/frontend.png" />
+        <link rel="stylesheet" href="about.css" />
+        <link
+          href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap"
+          rel="stylesheet"
+        />
 
-</body>
+        <!-- icons -->
+        <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 
+        <!-- gsap -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
+
+        <!-- AnimeJS -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+
+        <!-- JQuery -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
+        <title>About Me</title>
+      </head>
+
+      <body
+        style="-moz-user-select: none; -webkit-user-select: none; -ms-user-select: none; user-select: none; -o-user-select: none"
+        unselectable="on"
+        onselectstart="return false;"
+        onmousedown="return false;"
+        id="body"
+        class="body"
+      >
+        <div class="loading-screen"></div>
+
+        <div class="hero" id="hero"></div>
+
+        <!-- <div class="circles">
+            <div class="circle-multiple circle-multiple-1">
+              <div class="circle circle-1"></div>
+              <div class="circle circle-2"></div>
+              <div class="circle circle-3"></div>
+              <a href="index.html" class="btn-link home">HOME</a>
+            </div>
+        </div> -->
+
+        <div class="main">
+          <ion-icon id="options" name="options"></ion-icon>
+
+          <div class="boxes">
+            <div class="box">
+              <div class="image"></div>
+              <div class="content-wrapper">
+                <h3>Bike Shop</h3>
+                <h6>Technologies: Angular, Typescript, Firebase, SCSS, Angular Material, Google APIs</h6>
+                <p>Bike shop with login for admin. Admin can add/edit/delete items on shop.</p>
+                <a href="https://github.com/Larnex/Bike-shop-angular" target="_blank"> Repository</a>
+                <a href="" target="_blank">Demo (In Progress)</a>
+              </div>
+            </div>
+            <div class="box">
+              <div class="image"></div>
+              <div class="content-wrapper">
+                <h3>Trello-like</h3>
+                <h6>Technologies: Angular, Typescript, Angulafire, SCSS, Angular Material</h6>
+                <p>Kanban app. Have log in and sign up feature with google and with email using reactive forms, drop and down feature for boards and tasks</p>
+                <a href="https://github.com/Larnex/Trello-like" target="_blank">Repository</a>
+                <a href="">Demo (In Progress)</a>
+              </div>
+            </div>
+            <div class="box">
+                <div class="image"></div>
+                <div class="content-wrapper">
+                  <h3>Dental Clinic</h3>
+                  <h6>Technologies: HTML, CSS, JS</h6>
+                  <p>Simple landing page</p>
+                  <a href="https://github.com/Larnex/JuliaBoikoClinic" target="_blank">Repository</a>
+                  <a href="https://juliaboikoclinic.netlify.app/">Demo</a>
+                </div>
+              </div>
+              <div class="box">
+                <div class="image"></div>
+                <div class="content-wrapper">
+                  <h3>Weather widget</h3>
+                  <h6>Technologies: HTML, CSS, JS, OpenweathermapAPI</h6>
+                  <p>Simple weather widget using OpenweathermapAPI</p>
+                  <a href="https://github.com/Larnex/Weather-Widget" target="_blank">Repository</a>
+                  <a href="">Demo (In Progress)</a>
+                </div>
+              </div>
+              <div class="box">
+                <div class="image"></div>
+                <div class="content-wrapper">
+                  <h3>Weather widget</h3>
+                  <h6>Technologies: HTML, CSS, JS, OpenweathermapAPI</h6>
+                  <p>Simple weather widget using OpenweathermapAPI</p>
+                  <a href="https://github.com/Larnex/Weather-Widget" target="_blank">Repository</a>
+                  <a href="">Demo (In Progress)</a>
+                </div>
+              </div>
+              <div class="box">
+                <div class="image"></div>
+                <div class="content-wrapper">
+                  <h3>To-Do List</h3>
+                  <h6>Technologies: HTML, CSS, JQuery</h6>
+                  <p>Simple To-Do app using JQuery</p>
+                  <a href="https://github.com/Larnex/ToDo" target="_blank">Repository</a>
+                  <a href="">Demo (In Progress)</a>
+                </div>
+              </div>
+              <div class="box">
+                <div class="image"></div>
+                <div class="content-wrapper">
+                  <h3>Pure CSS Slider</h3>
+                  <h6>Technologies: HTML, CSS(SCSS)</h6>
+                  <p>Simple CSS Slider</p>
+                  <a href="https://github.com/Larnex/Pure-CSS-Slider" target="_blank">Repository</a>
+                  <a href="">Demo (In Progress)</a>
+                </div>
+              </div>
+        </div>
+
+        <script src="about.js"></script>
+      </body>
+    </html>
+  </body>
 </html>
