--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Portfolio</title>
 
     <!-- logo -->
-    <link rel="icon" href="https://papercallio-production.s3.amazonaws.com/uploads/event/logo/786/frontend.png" />
+    <link rel="icon" href="https://papercallio-production.s3.amazonaws.com/uploads/event/lo go/786/frontend.png" />
 
     <!-- stylesheet -->
     <link rel="stylesheet" href="shared.css" />
