edit info & add home btn

--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@
         </h1>
 
         <p id="tagline" class="p1">
-          Hard Skills: HTML, CSS(Sass), JS.
+          Hard Skills: HTML, CSS(Sass), JS, Angular, Node.js, MongoDB, Express.
           <br />
           <br />
-          Soft Skills: English.
+          Languages: English, Russian, Polish, Ukrainian.
         </p>
 
         <br /><br /><br />
 
-        <p id="tagline" class="p2">You can check out my work down below!</p>
+        <p id="tagline" class="p2">You can check out my portfolio down below!</p>
         <div class="circles">
           <div class="circle-multiple circle-multiple-1">
             <div class="circle circle-1"></div>
