--- a/portfolio.html
+++ b/portfolio.html
@@ -139,14 +139,14 @@
               </div>
         </div>
 
-      <!-- <div class="circles">
+      <div class="circles">
           <div class="circle-multiple circle-multiple-1">
             <div class="circle circle-1"></div>
             <div class="circle circle-2"></div>
             <div class="circle circle-3"></div>
             <a href="index.html" class="btn-link home">HOME</a>
           </div>
-      </div> -->
+      </div>
         <script src="portfolio.js"></script>
       </body>
 </html>
