--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
     <title>Portfolio</title>
 
     <!-- logo -->
-    <link rel="icon" href="https://papercallio-production.s3.amazonaws.com/uploads/event/lo go/786/frontend.png" />
+    <link
+      rel="icon"
+      href="https://papercallio-production.s3.amazonaws.com/uploads/event/lo go/786/frontend.png"
+    />
 
     <!-- stylesheet -->
     <link rel="stylesheet" href="shared.css" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="media.css" />
 
     <!-- icons -->
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
@@ -27,7 +31,13 @@
   </head>
 
   <body
-    style="-moz-user-select: none; -webkit-user-select: none; -ms-user-select: none; user-select: none; -o-user-select: none"
+    style="
+      -moz-user-select: none;
+      -webkit-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+      -o-user-select: none;
+    "
     unselectable="on"
     onselectstart="return false;"
     onmousedown="return false;"
@@ -63,11 +73,11 @@
           <br />
           <br />
           Languages: English, Russian, Polish, Ukrainian.
+          <br />
+          <br />
+          You can check out my portfolio down below!
         </p>
 
-        <br /><br /><br />
-
-        <p id="tagline" class="p2">You can check out my portfolio down below!</p>
         <div class="circles">
           <div class="circle-multiple circle-multiple-1">
             <div class="circle circle-1"></div>
